# fast_api_challange

./: .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  README.md  activate_project.sh  docker-compose.yml  folder_structure.txt  pyproject.toml
.github/workflows/: CI.yaml
app/: config.py  logger.py  main.py
app/api/: __init__.py  exception_handlers.py  global_dependencies.py  home_router.py  middlewares.py
app/api/v1/: __init__.py  auth.py  decorators.py  dependencies.py  guards.py  posts.py
app/core/domain/commons/: exceptions.py  protocols.py  schemas.py  session.py
app/core/domain/commons/entities/: base_entity.py  status_entity.py
app/core/domain/post/: entities.py  exceptions.py  protocols.py
app/core/domain/user/: entities.py  exceptions.py  protocols.py
app/core/services/authentication_services/: __init__.py  schemas.py  sign_in_service.py  sign_up_service.py  utils.py
app/core/services/commons/: schemas.py  unit_of_work.py
app/core/services/post_services/: __init__.py  add_post_service.py  cache_service.py  delete_post_service.py  get_posts_service.py  schemas.py
app/persistence/cache/: __init__.py
app/persistence/sqlalchemy/: alembic.ini  connection.py  constants.py  dependencies.py
app/persistence/sqlalchemy/migrations/: env.py
app/persistence/sqlalchemy/migrations/versions/: a437ebad5f2a_add_user_table.py  dc4629d2dbc1_added_post_table.py
app/persistence/sqlalchemy/models/: __init__.py  post_model.py  serializers.py  user_model.py
app/persistence/sqlalchemy/repository_imp/: post_repository.py  user_repository.py
